--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 #自行选择CPU或CUDA版本的torch1.10.0
-#pip3 install torch==1.10.0+cu113 torchvision==0.11.1+cu113 torchaudio===0.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
+#pip install  torchvision==0.12.0+cu113 torchaudio==0.11.0 --extra-index-url https://download.pytorch.org/whl/cu113
+#pip install torch==1.11.0+cu113 -f https://mirror.sjtu.edu.cn/pytorch-wheels/cu113/?mirror_intel_list
+#python==3.10
 numpy==1.26.4
 matplotlib==3.8.4
 h5py==3.11.0
@@ -8,4 +10,8 @@ scikit-image==0.23.1
 scikit-learn==1.4.2
 einops==0.7.0
 mne==1.6.1
-jupyterlab
+jupyterlab~=4.2.5
+torch~=1.11.0+cu113
+torchvision~=0.12.0+cu113
+pandas~=2.2.2
+pyEDFlib~=0.1.38
